# oacc

./: .gitignore  .pyproject.toml  README.md  pyproject.toml
notebooks/: cleaning_and_eda.ipynb  modified_carg_score.ipynb  oacc_overlap_with_a2r.ipynb  paper1.ipynb
src/oacc_package/: __init__.py  constants.py  data_cleaning.py  eda.py  info.py
src/oacc_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
