[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oacc_package"
version = "0.1.0"
description = "Utilities for OACC dataset processing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyodbc>=4.0",
    
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
